Fixed skills card alignment

--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -17,7 +17,7 @@
     position: absolute;
     top: 20%;
     left: 20%;
-    margin: -70px 0 0 -50px;
+    margin: -70px 0 0 -75px;
     padding: 30px 10px;
     border-radius: 10px;
     border: rgb(199, 199, 199) 1px solid;
